Added authorization to users endpoints
